--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,15 @@ name = "tokio-smp"
 version = "0.1.0"
 authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
 license = "MIT/Apache-2.0"
+build = "build.rs"
 description = """
-Seastar for tokio.
+Symmetric multiprocessing for tokio.
 """
 
 [dependencies]
-# Generic align
-# num = "0.1"
-
-hwloc = "0.3.0"
-libc = "0.2.7"
+# Figuring out the memory map
+nix = "0.6.0"
+libc = "0.2.11"
 error-chain = "0.5.0"
 
 # Deriving
@@ -22,4 +21,6 @@ derive_builder = "0.2.0"
 [dev-dependencies]
 env_logger = "0.3"
 
+[build-dependencies]
+gcc = "0.3.35"
 
