--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ features = ["eventfd"]
 [dev-dependencies]
 hamcrest = "0.1.2"
 spectral = "0.6.0"
+slog = { version = ">= 2.0.0-1.0, < 2.0.0-2", features = ["max_level_trace", "release_max_level_trace"] }
 slog-term = ">= 2.0.0-1.0, < 2.0.0-2"
 slog-scope = ">= 2.0.0-1.0, < 2.0.0-2"
 
