--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ Symmetric multiprocessing for tokio.
 # Figuring out the memory map
 libc = "0.2.11"
 error-chain = "0.5.0"
-slog = ">= 2.0.0-1.0, < 2.0.0-2"
+slog = "2.0.2"
 
 # Deriving
 derive_builder = "0.3.0"
@@ -40,9 +40,9 @@ features = ["eventfd"]
 [dev-dependencies]
 hamcrest = "0.1.2"
 spectral = "0.6.0"
-slog = { version = ">= 2.0.0-1.0, < 2.0.0-2", features = ["max_level_trace", "release_max_level_trace"] }
-slog-term = ">= 2.0.0-1.0, < 2.0.0-2"
-slog-scope = ">= 2.0.0-1.0, < 2.0.0-2"
+slog = { version = "2.0.2", features = ["max_level_trace", "release_max_level_trace"] }
+slog-term = "~2.0.0-4"
+slog-scope = "2.0.0"
 
 [build-dependencies]
 bindgen = "0.19.0"
