--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ Symmetric multiprocessing for tokio.
 # Figuring out the memory map
 libc = "0.2.11"
 error-chain = "0.5.0"
-slog = "2.0.2"
+slog = "2.1.1"
 
 # Deriving
 derive_builder = "0.3.0"
@@ -21,7 +21,7 @@ derive_builder = "0.3.0"
 mio = "0.6.4"
 futures = "0.1.10"
 tokio-core = "0.1.4"
-bounded-spsc-queue = "0.1.2"
+bounded-spsc-queue = "0.2.0"
 scoped-tls = "0.1"
 slab = "0.3.0"
 crossbeam = "0.2.10"
@@ -37,9 +37,9 @@ features = ["eventfd"]
 [dev-dependencies]
 hamcrest = "0.1.2"
 spectral = "0.6.0"
-slog = { version = "2.0.2", features = ["max_level_trace", "release_max_level_trace"] }
-slog-term = "~2.0.0-4"
-slog-scope = "2.0.0"
+#slog = { version = "~2.1.1", features = ["max_level_trace", "release_max_level_trace"] }
+slog-term = "2.0.2"
+#slog-scope = "~4.0.1"
 
 [build-dependencies]
 bindgen = "0.19.0"
