--- a/smp-core/Cargo.toml
+++ b/smp-core/Cargo.toml
@@ -5,6 +5,8 @@ build = "build.rs"
 authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
 
 [dependencies]
+smp-resource = {path = "../smp-resource"}
+
 # Figuring out the memory map
 libc = "0.2.11"
 error-chain = "0.5.0"
