--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,13 @@ Symmetric multiprocessing for rust.
 smp-core = { path = "smp-core" }
 smp-resource = { path = "smp-resource" }
 
+[dev-dependencies]
+cargo-make = "0.10.0"
+
 [workspace]
+members = [
+  "smp-resource",
+  "smp-core"
+]
 
 # https://sagiegurari.github.io/cargo-make/
