--- a/smp-core/Cargo.toml
+++ b/smp-core/Cargo.toml
@@ -4,38 +4,18 @@ version = "0.1.0"
 authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
 
 [dependencies]
-smp-resource = {path = "../smp-resource"}
+smp-resource = { path = "../smp-resource" }
+futures-core = { path = "../futures-rs/futures-core" }
 
-# Figuring out the memory map
-libc = "0.2.11"
-error-chain = "0.5.0"
-slog = "2.1.1"
-
-# Deriving
-derive_builder = "0.3.0"
-
-# Tokio
-mio = "0.6.4"
-futures = "0.1.10"
-tokio-core = "0.1.4"
-bounded-spsc-queue = "0.2.0"
-scoped-tls = "0.1"
-slab = "0.3.0"
-crossbeam = "0.2.10"
-itertools = "0.5.9"
-
-[dependencies.nix]
-version = "0.6.0"
-features = ["eventfd"]
+libc = "*"
+error-chain = "*"
+slog = "*"
+bounded-spsc-queue = "*"
+slab = "*"
+crossbeam = "*"
+itertools = "*"
 
 [dev-dependencies]
-hamcrest = "0.1.2"
-spectral = "0.6.0"
-#slog = { version = "~2.1.1", features = ["max_level_trace", "release_max_level_trace"] }
-slog-term = "2.0.2"
-#slog-scope = "~4.0.1"
-
-[build-dependencies]
-bindgen = "0.19.0"
-gcc = "0.3.35"
-pkg-config = "0.3.8"
+hamcrest = "*"
+spectral = "*"
+slog-term = "*"
