--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,15 @@ Symmetric multiprocessing for rust.
 [dependencies]
 # Define versions of dependencies
 bounded-spsc-queue = "0.2.0"
-crossbeam = "0.2.10"
-error-chain = "0.5.0"
-itertools = "0.5.9"
-libc = "0.2.11"
-slab = "0.3.0"
+crossbeam = "0.3.2"
+error-chain = "0.11.0"
+itertools = "0.7.6"
+libc = "0.2.36"
+mempool = "0.3.1"
+pagecache = "0.2.5"
+slab = "0.4.0"
 slog = "2.1.1"
+threadpool = "1.7.1"
 
 smp-core = { path = "smp-core" }
 smp-resource = { path = "smp-resource" }
