--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ mempool = "0.3.1"
 pagecache = "0.2.5"
 slab = "0.4.0"
 slog = "2.1.1"
+slog-async = "2.2.0"
+slog_derive = "0.1.0"
 threadpool = "1.7.1"
 
 smp-core = { path = "smp-core" }
