--- a/starfish-future/Cargo.toml
+++ b/starfish-future/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "smp-executor"
+name = "starfish-future"
 version = "0.1.0"
+workspace = "../"
 authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
 
 [dependencies]
 futures-core = "*"
 futures-util = "*"
-
-[dev-dependencies]
-futures = "*"
-hamcrest = "*"
