Force linking of rte static libs. * For now deeply hardcoded.

--- a/rust-spdk/Cargo.toml
+++ b/rust-spdk/Cargo.toml
@@ -8,6 +8,10 @@ description = """
 Rust bindings to spdk.
 """
 
+[features]
+bla = []
+default = ["bla"]
+
 [lib]
 name = "rust_spdk"
 path = "src/lib.rs"
