--- a/rust-spdk/.cargo/config
+++ b/rust-spdk/.cargo/config
@@ -4,10 +4,11 @@
 [build]
 rustflags = [
 
+    # When linking, the lowest level dependencies should go at the end (system libraries etc.)
+
     "-C", "link-arg=-Wl,-z,relro,-z,now",
     "-C", "link-arg=-Wl,-z,noexecstack",
-    "-C", "link-arg=-pthread",
-
+    
     # "-C", "link-arg=-Wl,--whole-archive",
 
     "-C", "link-arg=-l", "-C", "link-arg=spdk_copy_ioat",
@@ -41,7 +42,7 @@ rustflags = [
     "-C", "link-arg=-l", "-C", "link-arg=spdk_event_bdev",
     "-C", "link-arg=-l", "-C", "link-arg=spdk_event_copy",
 
-    # "-C", "link-arg=-Wl,--no-whole-archive",
+    "-C", "link-arg=-Wl,--no-whole-archive",
 
     "-C", "link-arg=-l", "-C", "link-arg=spdk_blobfs",
     "-C", "link-arg=-l", "-C", "link-arg=spdk_blob",
@@ -49,33 +50,30 @@ rustflags = [
     "-C", "link-arg=-l", "-C", "link-arg=spdk_blob_bdev",
     "-C", "link-arg=-l", "-C", "link-arg=spdk_copy",
     "-C", "link-arg=-l", "-C", "link-arg=spdk_event",
-    "-C", "link-arg=-l", "-C", "link-arg=spdk_util",
     "-C", "link-arg=-l", "-C", "link-arg=spdk_conf",
     "-C", "link-arg=-l", "-C", "link-arg=spdk_trace",
     "-C", "link-arg=-l", "-C", "link-arg=spdk_log",
+    "-C", "link-arg=-l", "-C", "link-arg=spdk_rpc",
     "-C", "link-arg=-l", "-C", "link-arg=spdk_jsonrpc",
     "-C", "link-arg=-l", "-C", "link-arg=spdk_json",
-    "-C", "link-arg=-l", "-C", "link-arg=spdk_rpc",
+    "-C", "link-arg=-l", "-C", "link-arg=spdk_util",
     "-C", "link-arg=/tmp/spdk/build/lib/libspdk_env_dpdk.a",
 
-    # "-C", "link-arg=-Wl,--start-group",
-    # "-C", "link-arg=-Wl,--whole-archive",
+    "-C", "link-arg=-Wl,--start-group",
+    "-C", "link-arg=-Wl,--whole-archive",
     "-C", "link-arg=/tmp/spdk/dpdk/build/lib/librte_eal.a",
     "-C", "link-arg=/tmp/spdk/dpdk/build/lib/librte_mempool.a",
     "-C", "link-arg=/tmp/spdk/dpdk/build/lib/librte_ring.a",
     "-C", "link-arg=/tmp/spdk/dpdk/build/lib/librte_mempool_ring.a",
     "-C", "link-arg=/tmp/spdk/dpdk/build/lib/librte_pci.a",
     "-C", "link-arg=/tmp/spdk/dpdk/build/lib/librte_bus_pci.a",
-    # "-C", "link-arg=-Wl,--end-group",
-    # "-C", "link-arg=-Wl,--no-whole-archive",
+    "-C", "link-arg=-Wl,--end-group",
+    "-C", "link-arg=-Wl,--no-whole-archive",
     
     "-C", "link-arg=-lnuma",
+    "-C", "link-arg=-luuid",
+    "-C", "link-arg=-pthread",
     "-C", "link-arg=-ldl",
     "-C", "link-arg=-lrt",
-    "-C", "link-arg=-luuid"
+    "-C", "link-arg=-l", "-C", "link-arg=c",
 ]
-
-# LDFLAGS=-Wl,-z,relro,-z,now -Wl,-z,noexecstack -pthread
-# OBJS= 
-# LIBS=-Wl,--whole-archive -lspdk_copy_ioat -lspdk_ioat -Wl,--no-whole-archive  -Wl,--whole-archive -lspdk_vbdev_lvol -lspdk_blob -lspdk_blob_bdev -lspdk_lvol -lspdk_bdev_malloc -lspdk_bdev_null -lspdk_bdev_nvme -lspdk_nvme -lspdk_vbdev_passthru -lspdk_vbdev_error -lspdk_vbdev_gpt -lspdk_vbdev_split -lspdk_bdev_aio -lspdk_bdev_virtio -lspdk_virtio -Wl,--no-whole-archive -laio -L/tmp/spdk/build/lib -Wl,--whole-archive -lspdk_event_bdev -lspdk_event_copy -Wl,--no-whole-archive -lspdk_blobfs -lspdk_blob -lspdk_bdev -lspdk_blob_bdev -lspdk_copy -lspdk_event -lspdk_util -lspdk_conf -lspdk_trace -lspdk_log -lspdk_jsonrpc -lspdk_json -lspdk_rpc /tmp/spdk/build/lib/libspdk_env_dpdk.a -Wl,--start-group -Wl,--whole-archive /tmp/spdk/dpdk/build/lib/librte_eal.a /tmp/spdk/dpdk/build/lib/librte_mempool.a /tmp/spdk/dpdk/build/lib/librte_ring.a /tmp/spdk/dpdk/build/lib/librte_mempool_ring.a /tmp/spdk/dpdk/build/lib/librte_pci.a /tmp/spdk/dpdk/build/lib/librte_bus_pci.a -Wl,--end-group -Wl,--no-whole-archive -lnuma -ldl 
-# SYS_LIBS=-lrt -luuid
