--- a/rust-spdk/.cargo/config
+++ b/rust-spdk/.cargo/config
@@ -42,7 +42,7 @@ rustflags = [
     "-C", "link-arg=-l", "-C", "link-arg=spdk_event_bdev",
     "-C", "link-arg=-l", "-C", "link-arg=spdk_event_copy",
 
-    "-C", "link-arg=-Wl,--no-whole-archive",
+    #"-C", "link-arg=-Wl,--no-whole-archive",
 
     "-C", "link-arg=-l", "-C", "link-arg=spdk_blobfs",
     "-C", "link-arg=-l", "-C", "link-arg=spdk_blob",
@@ -67,8 +67,8 @@ rustflags = [
     "-C", "link-arg=/tmp/spdk/dpdk/build/lib/librte_mempool_ring.a",
     "-C", "link-arg=/tmp/spdk/dpdk/build/lib/librte_pci.a",
     "-C", "link-arg=/tmp/spdk/dpdk/build/lib/librte_bus_pci.a",
-    "-C", "link-arg=-Wl,--end-group",
     "-C", "link-arg=-Wl,--no-whole-archive",
+    "-C", "link-arg=-Wl,--end-group",
     
     "-C", "link-arg=-lnuma",
     "-C", "link-arg=-luuid",
