--- a/rust-spdk/Cargo.toml
+++ b/rust-spdk/Cargo.toml
@@ -4,15 +4,11 @@ version = "0.1.0"
 authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
 workspace = "../"
 categories = ["external-ffi-bindings"]
-#links = "llvm"
-build = "build.rs"
+# Uncomment to regenerate bindings.
+# build = "build_file.rs"
 description = """
 Rust bindings to spdk.
 """
-
-[features]
-default = ["linker-flags"]
-linker-flags = []
 
 [lib]
 name = "rust_spdk"
@@ -26,6 +22,6 @@ path = "src/hello_world.rs"
 [dependencies]
 
 [build-dependencies]
-bindgen = "*"
-make-cmd = "*"
-toml = "*"
+# Enable when regenerating bindings
+#bindgen = "*"
+#toml = "*"
