--- a/rust-spdk/Cargo.toml
+++ b/rust-spdk/Cargo.toml
@@ -19,6 +19,7 @@ name = "hello_world"
 path = "src/hello_world.rs"
 
 [dependencies]
+#failure = "*"
 
 [build-dependencies]
 # Enable when regenerating bindings
