--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ Async programming with spdk for rust.
 """
 
 [dependencies]
-futures = "0.2.1"
+# General
+failure = "0.1.1"
+
+# Futures
 futures-core = "0.2.1"
 futures-util = "0.2.1"
 # Define versions of dependencies
@@ -25,9 +28,9 @@ futures-util = "0.2.1"
 #slog_derive = "0.1.0"
 #threadpool = "1.7.1"
 
-starfish-executor = { path = "starfish-executor" }
 rust-spdk = { path = "rust-spdk" }
-starfish-future = { path = "starfish-future" }
+#starfish-executor = { path = "starfish-executor" }
+#starfish-future = { path = "starfish-future" }
 
 [dev-dependencies]
 cargo-make = "0.10.0"
