--- a/rust-spdk/Cargo.toml
+++ b/rust-spdk/Cargo.toml
@@ -19,7 +19,8 @@ name = "hello_world"
 path = "src/hello_world.rs"
 
 [dependencies]
-#failure = "*"
+failure = "*"
+failure_derive = "*"
 
 [build-dependencies]
 # Enable when regenerating bindings
