--- a/starfish-executor/Cargo.toml
+++ b/starfish-executor/Cargo.toml
@@ -8,8 +8,7 @@ Single threaded executor for futures-rs. No Arc in sight.
 """
 
 [dependencies]
-futures-core = { git = "https://github.com/rust-lang-nursery/futures-rs", rev = "cf130ff" }
+futures-preview = "0.3.0-alpha.1"
 
 [dev-dependencies]
-#futures = "*"
 hamcrest = "*"
