It fucking works, I got a callback from spdk

--- a/spdk-sys/Cargo.toml
+++ b/spdk-sys/Cargo.toml
@@ -15,6 +15,7 @@ crate-type = ["staticlib"]
 [dependencies]
 failure = "*"
 failure_derive = "*"
+futures-preview = "0.3.0-alpha.1"
 
 [build-dependencies]
 bindgen = "*"
