--- a/starfish-example-app/Cargo.toml
+++ b/starfish-example-app/Cargo.toml
@@ -10,4 +10,4 @@ Example app that uses the APIs.
 [dependencies]
 spdk-sys = { path = "../spdk-sys" }
 starfish-executor = { path = "../starfish-executor" }
-futures-preview = "*"
+futures-preview = "0.3.0-alpha.1"
