--- a/starfish-example-app/Cargo.toml
+++ b/starfish-example-app/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["edition"]
+
 [package]
 name = "starfish-example-app"
 version = "0.1.0"
@@ -6,6 +8,7 @@ authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
 description = """
 Example app that uses the APIs.
 """
+edition = '2018'
 
 [dependencies]
 failure = "*"
