--- a/spdk-sys/Cargo.toml
+++ b/spdk-sys/Cargo.toml
@@ -17,9 +17,9 @@ links = "spdk"
 [dependencies]
 failure = "*"
 failure_derive = "*"
-futures-preview = "0.3.0-alpha.2"
+futures-preview = "= 0.3.0-alpha.5"
 
 [build-dependencies]
-bindgen = "*"
+bindgen = "0.37.4"
 toml = "*"
 make-cmd = "*"
