--- a/starfish-executor/Cargo.toml
+++ b/starfish-executor/Cargo.toml
@@ -8,7 +8,7 @@ Single threaded executor for futures-rs. No Arc in sight.
 """
 
 [dependencies]
-futures-preview = "0.3.0-alpha.2"
+futures-preview = "= 0.3.0-alpha.5"
 
 [dev-dependencies]
 hamcrest = "*"
