Finished porting hello_blob example. * APIs are not the greatest, but they work! * Upgrade futures. * Upgrade nightly version. * Cleanup build.rs to read root dir of spdk from env variables if set.

--- a/spdk-sys/Cargo.toml
+++ b/spdk-sys/Cargo.toml
@@ -1,5 +1,3 @@
-cargo-features = ["edition"]
-
 [package]
 name = "spdk-sys"
 version = "0.1.0"
@@ -17,7 +15,8 @@ links = "spdk"
 [dependencies]
 failure = "*"
 failure_derive = "*"
-futures-preview = "= 0.3.0-alpha.5"
+futures-preview = "= 0.3.0-alpha.6"
+libc = "= 0.2.43"
 
 [build-dependencies]
 bindgen = "0.37.4"
