.cargo/config in only one place.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ target/
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here http://doc.crates.io/guide.html#cargotoml-vs-cargolock
 Cargo.lock
-/.cargo/
+#/.cargo/
 
 # IntelliJ directory
 /.idea/
