--- a/starfish-example-app/Cargo.toml
+++ b/starfish-example-app/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "starfish-example-app"
 version = "0.1.0"
-workspace = "../"
 authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
 description = """
 Example app that uses the APIs.
@@ -9,7 +8,8 @@ Example app that uses the APIs.
 edition = '2018'
 
 [dependencies]
-failure = "*"
 spdk-sys = { path = "../spdk-sys" }
 starfish-executor = { path = "../starfish-executor" }
+
+failure = ""
 futures-preview = "= 0.3.0-alpha.6"
