--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,21 @@ jobs:
           name: Build spdk
           command: sh .circleci/scripts/build_spdk.sh
       - run:
+          name: Run 'cargo clippy'
+          command: |
+            rustup component add clippy-preview;
+            # Enabling warnings trips clippy in generated code that has a compiler warning; 
+            # see https://github.com/rust-lang-nursery/rust-clippy/issues/702
+            cargo clippy --all --all-targets --all-features # -- -D warnings
+       run:
+          name: Run 'cargo fmt'
+          command: |
+            rustup component add rustfmt-preview;
+            cargo fmt --all -- --check;
+      - run:
           name: Build starfish
-          command: cargo build
+          command: cargo build --all
+      - run:
+          name: Run tests
+          command: cargo test --all
       
