--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,20 +9,20 @@ jobs:
           name: Build spdk
           command: sh .circleci/scripts/build_spdk.sh
 
-      # - run:
-      #     name: Run 'cargo clippy'
-      #     command: |
-      #       rustup component add clippy-preview
-      #       # Enabling warnings trips clippy in generated code that has a compiler warning; 
-      #       # See https://github.com/rust-lang-nursery/rust-clippy/issues/702
-      #       # -- -D warnings
-      #       cargo clippy --all --all-targets --all-features
+      - run:
+          name: Run 'cargo clippy'
+          command: |
+            rustup component add clippy-preview
+            # Enabling warnings trips clippy in generated code that has a compiler warning; 
+            # See https://github.com/rust-lang-nursery/rust-clippy/issues/702
+            # -- -D warnings
+            cargo clippy --all --all-targets --all-features
 
-      #  - run:
-      #     name: Run 'cargo fmt'
-      #     command: |
-      #       rustup component add rustfmt-preview
-      #       cargo fmt --all -- --check
+      - run:
+          name: Run 'cargo fmt'
+          command: |
+            rustup component add rustfmt-preview
+            cargo fmt --all -- --check
 
       - run:
           name: Build starfish
