--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,5 @@
+# TODO: Add caching: either build a custom docker image or 
+# try something like https://discuss.circleci.com/t/caching-apt-get-packages/9076
 version: 2
 jobs:
   build:
